<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent" >

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/ytt_dialog_bg"
        android:orientation="vertical" >

        <!-- Title -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp" >

            <ImageView
                android:id="@+id/yunshi_dialog_indicator"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:contentDescription="(Warning: Not WIFI Condition)"
                android:src="@drawable/ytt_dialog_disable"
                android:visibility="gone" />

            <TextView
                android:id="@+id/yunshi_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/red"
                android:textSize="17dip" />

            <Button
                android:id="@+id/yunshi_dialog_id_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/ytt_dialog_button_close_bg_selector"
                android:visibility="gone" />
        </RelativeLayout>

        <!-- split -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.7dp"
            android:layout_marginBottom="3.0dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/yemianfengexian" />
        <!-- Content -->

        <LinearLayout
            android:id="@+id/yunshi_dialog_content_ll_out"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp" >

                <LinearLayout
                    android:id="@+id/yunshi_dialog_content_ll"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/yunshi_dialog_content"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:focusable="true"
                        android:textColor="#AAABAF" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
        <!-- Ignore CheckBox -->

        <CheckBox
            android:id="@+id/umeng_update_id_check"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:button="@drawable/ytt_dialog_button_check_selector"
            android:text="@string/ignore"
            android:textColor="#AAABAF"
            android:visibility="gone" />

        <!-- OK&Cancel Button -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/yunshi_dialog_id_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:background="@drawable/ytt_dialog_button_ok_bg_selector"
                android:gravity="center"
                android:text="@string/yunshi_update_updatenow" />

            <TextView
                android:id="@+id/yunshi_dialog_id_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:background="@drawable/ytt_dialog_button_cancel_bg_selector"
                android:gravity="center"
                android:text="@string/yunshi_update_updatenonow" />

            <Button
                android:id="@+id/yunshi_dialog_id_ignore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/ytt_dialog_button_cancel_bg_selector"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/ignore"
                android:textColor="#AAABAF"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>